--- a/index.html
+++ b/index.html
@@ -12,4 +12,5 @@ layout: default
   {% include other-projects.html %}
   {% include footer.html %}
   {% include top-button.html %}
+  <a style="display: none;" rel="me" href="https://mastodon.social/@eedris">Mastodon</a>
 </div>
